# -

./: CMakeLists.txt  Dockerfile  Nixpacks.toml  bot.py  dare.json  jokes.json  main.cpp  main.py  requirements.txt  riddles.json  truth.json
